# worker-kv

./: .gitignore  .secrets.example  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
example/worker/: worker.js
src/: builder.rs  lib.rs
tests/: integration.rs  wrangler.template.toml
tests/worker/: Cargo.toml
tests/worker/src/: lib.rs
tests/worker/worker/: worker.js
tests/worker_kv_test/: Cargo.toml
tests/worker_kv_test/src/: lib.rs
