[package]
name = "worker-kv"
version = "0.1.1"
authors = ["Zeb Piasecki <zeb@zebulon.dev>"]
edition = "2018"
description = "Rust bindings to Cloudflare Worker KV Stores."
repository = "https://github.com/vlakreeh/worker-kv"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.50"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
wasm-bindgen = "0.2.73"
wasm-bindgen-futures = "0.4.23"
