[package]
name = "worker-kv"
version = "0.2.0"
authors = ["Zeb Piasecki <zeb@zebulon.dev>"]
edition = "2018"
description = "Rust bindings to Cloudflare Worker KV Stores."
repository = "https://github.com/zebp/worker-kv"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.50"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
wasm-bindgen = { version = "0.2.73", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.23"

[dev-dependencies]
reqwest = { version = "0.11.3", features = ["json"] }
tokio = { version = "1.5.0", features = ["rt", "macros", "rt-multi-thread", "test-util", "time"] }
