[package]
name = "example"
version = "0.1.0"
authors = ["Zeb Piasecki <zeb@zebulon.dev>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = "0.3.50"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
wasm-bindgen = "0.2.73"
wasm-bindgen-futures = "0.4.23"
worker-kv = { path = "../../" }
